--- a/vercel.json
+++ b/vercel.json
@@ -5,5 +5,8 @@
   ],
   "routes": [
     { "src": "/(.*)", "dest": "/app.py" }
-  ]
+  ],
+  "env": {
+    "SKLEARN_ALLOW_DEPRECATED_SKLEARN_PACKAGE_INSTALL": true
+  }
 }
