--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,15 @@
 {
   "version": 2,
   "builds": [
-    { "src": "app.py", "use": "@vercel/python" }
+    {
+      "src": "app.py",
+      "use": "@vercel/python"
+    }
   ],
   "routes": [
-    { "src": "/(.*)", "dest": "/app.py" }
-  ],
-  "env": {
-    "SKLEARN_ALLOW_DEPRECATED_SKLEARN_PACKAGE_INSTALL": true
-  }
+    {
+      "src": "/(.*)",
+      "dest": "/app.py"
+    }
+  ]
 }
