--- a/vercel.json
+++ b/vercel.json
@@ -12,4 +12,11 @@
       "dest": "/app.py"
     }
   ]
+  "configurations": [
+    {
+      "env": {
+        "SKLEARN_ALLOW_DEPRECATED_SKLEARN_PACKAGE_INSTALL" = true
+      }
+    }
+  ]
 }
